// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

option go_package = "github.com/cacos-group/cacos/apiV1";
option (gogoproto.goproto_getters_all) = false;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package apiV1;

// The greeting service definition.
service Cacos {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc AuthLogin (LoginRequest) returns (LoginReply) {}
  rpc NamespaceList (.google.protobuf.Empty) returns (NamespaceListReply) {
    option (google.api.http) = {
      get: "/v1/api/namespace/list"
    };
  }
  rpc AppList (AppListReq) returns (AppListReply) {
    option (google.api.http) = {
      get: "/v1/api/app/list"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}

message NamespaceListReq {
}

message Namespace {
  string namespace = 1;
}

message NamespaceListReply {
  repeated Namespace namespace_list= 1;
}

message App {
  string namespace = 1;
  string app = 2;
}

message AppListReq {
  string namespace = 1;
}

message AppListReply {
  repeated App app_list= 1;
}